--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -190,6 +190,15 @@
 }
 
 
+@online{componentHierarchy,
+ author = {Google},
+ year = {2018},
+ title = {Hierarchical Dependency Injectors},
+ url = {https://angular.io/guide/hierarchical-dependency-injection#the-injector-tree},
+ urldate = {2018-08-16}
+}
+
+
 @online{compRoot,
  author = {Seemann, Mark},
  year = {28.07.2011},
@@ -431,6 +440,15 @@
 }
 
 
+@online{interceptorAngularVersion,
+ author = {Chenkie, Ryan},
+ year = {2017},
+ title = {Angular Authentication: Using the Http Client and Http Interceptors},
+ url = {https://medium.com/@ryanchenkie_40935/angular-authentication-using-the-http-client-and-http-interceptors-2f9d1540eb8},
+ urldate = {2018-08-16}
+}
+
+
 @online{introASP,
  author = {Microsoft},
  year = {2018},
@@ -627,6 +645,15 @@
  title = {Node.js os Documentation},
  url = {https://nodejs.org/api/os.html},
  urldate = {2018-07-24}
+}
+
+
+@online{nodeSpawn,
+ author = {{Node.js Foundation}},
+ year = {2018},
+ title = {Node.js v10.9.0 Documentation: child{\_}process.spawn(command[, args][, options])},
+ url = {https://nodejs.org/api/child_process.html#child_process_child_process_spawn_command_args_options},
+ urldate = {2018-08-16}
 }
 
 
