worked on results

--- a/Report/pages/asp.tex
+++ b/Report/pages/asp.tex
@@ -63,6 +63,8 @@ The \lstcode{AddMvc()} extension method offers the possibility to configure the 
 
 To prevent unauthorized access, the \gls{mvc} package offers many ways to protect certain routes, also called actions. A developer may accept the default security settings or choose between filters and attributes to protect certain routes. It is important to note that the \gls{mvc} package does not authenticate or authorize any request at all. Another middleware is used specifically for this purpose. The \gls{jwt} Bearer middleware is the one used in the Jukebox project (see \myref{subsubsec:jwt}). \gls{mvc} only checks the \lstcode{HttpContext} to know whether and how a request is authorized, and then acts accordingly. By default, every route is unprotected. However, certain actions should only be executable if the request is authorized. There are two common solutions to this problem. First, a blacklist approach, where every route is accessible by default and the protected ones are declared explicitly. In this case, the developer uses the \lstcode{[Authorize]} attribute on any controller method which needs to be protected. The second option is to use a whitelist approach, where every route is protected by default and the unprotected routes are specified explicitly. As shown in \myautoref{lst:configureMvc.cs}, a filter is created using the \lstcode{AuthorizationPolicyBuilder} class and is applied to all routes. Then, all routes which shall be accessible without authorization are marked with the \lstcode{[AllowAnonymous]} attribute. The whitelist approach is used in the Jukebox project.
 
+\revMark{not building cuz of this} \newpage
+
 There are two ways of registering controllers for the \gls{mvc} package. By default, the \gls{mvc} package registers all classes with the \gls{di} container that are derived from the abstract \lstcode{Controller} base class and are located in the \enquote{Controllers} folder. If more functionality, such as interception, is needed the \lstcode{AddControllersAsServices()} configuration option can be used (\mylineref{lst:configureMvc.cs}{confMvc_controller}). This option forces the developer to register all controller classes explicitly. For the controllers registered in the Jukebox project, an interceptor is configured. This interceptor checks for null references passed to controller methods. If such a null reference is detected, the interceptor will throw a specific exception which results in a 400 \gls{http} response (see \myref{subsubsec:exceptionMiddleware}).
 
 \file{configureMvc.cs}{Registering the MVC package.}{NC_CSharp}
@@ -226,8 +228,3 @@ To use websockets in \gls{asp}, the websocket middleware must be added to the mi
 After accepting the socket, the Jukebox \gls{asp} server will authenticate the client and, if the authentication was successful, create a \lstcode{Player} object. Since the websocket connection will be terminated once the request is finished, the server will use a \enquote{keep-alive loop}, as shown in \myautoref{lst:HandlePlayerOwnerWebsocket.cs}. This loop will wait for any message coming from the player. Once a message arrives, the server checks whether the client wants to terminate the session or has sent data. In case of termination, the websocket will be closed and the \lstcode{Player} object will be destroyed. If the client has sent data, the server will handle the message in its \lstcode{HandlePlayerMessage()} method.
 
 \file{HandlePlayerOwnerWebsocket.cs}{The \enquote{keep-alive loop} for a websocket.}{NC_CSharp}
-
-\Section{Remember these points}
-developers can be female (duh)
-recognized, separat
-front-end, back-end
