--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -346,6 +346,15 @@
 }
 
 
+@online{electronMultithreading,
+ author = {GitHub},
+ year = {2018},
+ title = {Multithreading},
+ url = {https://electronjs.org/docs/tutorial/multithreading},
+ urldate = {2018-08-20}
+}
+
+
 @online{electronNotifications,
  author = {GitHub},
  year = {2018},
@@ -491,6 +500,15 @@
  title = {JavaScript Websocket API},
  url = {https://developer.mozilla.org/en-US/docs/Web/API/WebSocket},
  urldate = {2018-07-18}
+}
+
+
+@online{jsWebWorkers,
+ author = {{Parallel programming / Synchronization using JavaScript Web Workers}},
+ year = {2011},
+ title = {MatthewJ; Scravy},
+ url = {https://stackoverflow.com/questions/8333676/parallel-programming-synchronization-using-javascript-web-workers},
+ urldate = {2018-08-20}
 }
 
 
