--- a/Report/pages/introduction.tex
+++ b/Report/pages/introduction.tex
@@ -5,9 +5,9 @@ When developing a new application, certain aspects are to be considered. One of 
 
 Although web applications are still gaining popularity, desktop applications have not yet ceased to exist. This may be due to the fact that web applications are subject to many restrictions. Many tasks like editing files, communicating with special hardware or querying databases are not possible. Yet these basic tasks are essential for many applications. Another reason why users might prefer desktop applications, is the fact that they can be used offline and that a desktop application is what most people are used to.
 
-The release of the Electron Framework in 2013 opened up a way to combine the flexibility of web applications with the strength of desktop applications. Electron makes it possible to write one single code base consisting of \gls{html}, \gls{css} and \gls{js}, and still access native \gls{api}, files and databases. Electron also offers \gls{api}s for notifications or a system tray icon, which are commonly used elements in desktop applications.
+The release of the Electron Framework in 2013 opened up a way to combine the flexibility of web applications with the strength of desktop applications. Electron makes it possible to write one single code base consisting of \gls{html}, \gls{css} and \gls{js}, and still access native \glspl{api}, files and databases. Electron also offers \glspl{api} for notifications or a system tray icon, which are commonly used elements in desktop applications.
 
-The thesis will discuss how to write an application using the Electron framework in combination with the Angular front-end framework and the \gls{asp} back-end framework. Its goal is to determine if there are features which do not work at all and what adaptations are needed to get other features working given this specific combination of frameworks. Furthermore, the advantages and disadvantages compared to a pure desktop or web application will be analyzed.
+The thesis will discuss how to write an application using the Electron framework in combination with the Angular front-end framework and the \gls{asp} back-end framework. Its goal is to determine if there are features which do not work at all and what adaptations are needed to get other features working given this specific combination of frameworks. Furthermore, the advantages and disadvantages compared to a pure desktop or web application will be discussed.
 
 \Section{The Jukebox Project}
 
@@ -21,4 +21,10 @@ The entry point for the Jukebox application is in the Electron main.js file. Fro
 
 Communication between the frameworks is usually initiated from within the Angular code. When communicating with Electron \glspl{api} the \enquote{ngx-electron} package is used (\myref{subsubsec:ngxElectron}). For the communication with the \gls{asp} \gls{http} class and websockets are used.
 
+\Subsubsection{deployment}
+
 \Section{General stuff???}
+
+developers can be female (duh)
+recognized, separat
+front-end, back-end
