--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -411,6 +411,15 @@
 }
 
 
+@online{gulp,
+ author = {{Fractal Innovations}},
+ year = {2018},
+ title = {gulp.js},
+ url = {https://gulpjs.com/},
+ urldate = {2018-08-21}
+}
+
+
 @online{hmac,
  author = {Stallings, William},
  year = {1999},
@@ -772,6 +781,15 @@
  title = {SQLite EF Core Database Provider Limitations},
  url = {https://docs.microsoft.com/en-us/ef/core/providers/sqlite/limitations},
  urldate = {2018-08-09}
+}
+
+
+@online{squirrel,
+ author = {GitHub},
+ year = {2018},
+ title = {autoUpdater},
+ url = {https://electronjs.org/docs/api/auto-updater},
+ urldate = {2018-08-21}
 }
 
 
